# 3d-visualization-project

./: .gitignore  README.md
3Dvis-unity/Assets/Material/: New Material.mat
3Dvis-unity/Assets/Prefabs/: Sun.prefab  TimeOfDay.prefab
3Dvis-unity/Assets/Scenes/: SampleScene.unity
3Dvis-unity/ProjectSettings/: ProjectSettings.asset
WeatherAPI/: main.py
assets/MAP_1/Materials/: Material_0.012.mat  Material_0.014.mat  Material_0.015.mat  Material_0.016.mat  Material_0.017.mat  Material_0.018.mat  Material_0.019.mat  Material_0.020.mat  Material_0.021.mat  Material_0.022.mat  Material_0.023.mat  Material_0.024.mat  Material_0.025.mat  Material_0.026.mat  Material_0.027.mat  Material_0.028.mat  Material_0.029.mat  Material_0.030.mat  Material_0.031.mat  Material_0.032.mat  Material_0.033.mat  Material_0.034.mat  Material_0.035.mat  Material_0.036.mat  Material_0.037.mat  Material_0.038.mat  Material_0.039.mat  Material_0.040.mat  Material_0.041.mat  Material_0.042.mat  Material_0.043.mat  Material_0.044.mat  Material_0.045.mat  Material_0.046.mat  Material_0.047.mat  Material_0.048.mat  Material_0.049.mat  Material_0.050.mat  Material_0.051.mat  Material_0.052.mat  (+838 more)
documentation/: DOKU.md  README.md
documentation/presentations/: initial-presentation.pptx
python/data-proxy-service/: .cache.sqlite  hello.py  main.py  pyproject.toml
unity/Assets/: HelpMenuMnanager.cs  LocationManager.cs
unity/Assets/Fonts/: Square-Black SDF.asset  audowide SDF.asset
unity/ProjectSettings/: EditorBuildSettings.asset  InputManager.asset  ProjectSettings.asset
(+2957 files in other folders)
