[project]
name = "data-proxy-service"
version = "0.1.0"
description = "Proxy service for data handling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "openmeteo-requests>=1.3.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "tomli>=2.2.1",
    "websockets>=14.1",
]
